Updated paragraph spacing issue

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,11 @@ h3 {
     font-weight: 500;
 }
 
+p {
+    line-height: 1.5rem;
+    margin-top: 0;
+}
+
 .section-heading {
     color: #65de86;
     font-size: 2em;
